# path_tracer

./: CMakeLists.txt  README.md  vcpkg.json
path_tracer/: Ball.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Dielectric.cpp  Dielectric.h  Image.cpp  Image.h  ImageFile.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metal.cpp  Metal.h  Ray.h  Scene.cpp  Scene.h  Sphere.h  main.cpp
test/: CMakeLists.txt
